# md2jira

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  md2jira.py  pyproject.toml  requirements.txt  run.sh  test_export.csv  test_export.html
.github/: AGENTS.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: help-wanted.yml  ideas.yml  questions.yml  rfc.yml  show-and-tell.yml
.github/workflows/: pr.yml  release.yml  spectra-pull.yml  stale.yml
docs/: AI_PROMPT.md  DEPLOYMENT.md  EXAMPLE.md  SCHEMA.md  TEMPLATE.md  contributing.md  index.md  package-lock.json  vercel.json
docs/.vitepress/: config.ts
docs/guide/: configuration.md  environment.md  installation.md  plane.md  telemetry.md  trello.md
docs/plan/: IMPROVEMENTS-CHECKLIST.md
docs/reference/: cli.md
docs/tutorials/: first-sync.md
integrations/emacs/: README.md  spectra-commands.el  spectra-eglot.el  spectra-lsp.el  spectra-mode.el
integrations/helix/: README.md  config.toml  languages.toml
integrations/jetbrains/: README.md  build.gradle.kts  gradle.properties
integrations/lsp/: README.md  pyproject.toml
integrations/neovim/: README.md
integrations/sublime/: Default.sublime-keymap  README.md  Spectra.sublime-build  (+4 more)
integrations/zed/: Cargo.toml  README.md  extension.toml
integrations/zed/languages/spectra/: config.toml  highlights.scm
integrations/zed/src/: lib.rs
terraform-provider-jira/: Makefile  README.md  go.mod  main.go
tests/: __init__.py  conftest.py
(+351 files in other folders)
